Fix high school graph alignment

--- a/app/assets/stylesheets/graphs.scss
+++ b/app/assets/stylesheets/graphs.scss
@@ -53,11 +53,24 @@
     width: 145px;
   }
 
-  .content.four .visual:nth-of-type(2) {
+  .content.four > .visual:nth-of-type(2) {
     margin: 0 36px 0 74px;
   }
-  .content.four .visual:nth-of-type(3) {
+
+  .content.four > .visual:nth-of-type(3) {
     margin: 0 74px 0 36px;
+  }
+
+  .content.four.bar > .visual:nth-of-type(2) {
+    margin: 0;
+  }
+
+  .content.four.bar > .visual:nth-of-type(3) {
+    margin: 0 11px 0px 22px;
+  }
+
+  .content.four.bar > .visual:nth-of-type(4) {
+    margin: 0 22px 0 11px;
   }
 
   .content .graph {
@@ -351,7 +364,6 @@
     }
     & > .visual {
       width: 171px;
-      margin-right: 10px;
     }
     & > .visual > .graph { position: relative; }
     & > .visual > .graph > .number,
